create frontend page routing

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,11 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+[*.{tsx,jsx}]
+indent_style = space
+indent_size = 2
+
+
 [*.{json,yml,yaml}]
 indent_style = space
 indent_size = 2
