--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "codegen": "graphql-codegen --watch --config codegen.ts",
+    "prebuild": "graphql-codegen --config codegen.ts",
     "postbuild": "node copy-schema.js",
     "build": "tsc",
     "dev": "concurrently \"npm run codegen\" \"nodemon --watch src --exec node --loader ts-node/esm ./src/index.ts\"",
