--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,12 @@
   "main": "./dist/index.js",
   "type": "module",
   "scripts": {
-    "codegen": "graphql-codegen --watch --config codegen.ts",
-    "prebuild": "graphql-codegen --config codegen.ts",
+    "codegen": "graphql-codegen --config codegen.ts",
+    "codegen:watch": "graphql-codegen --watch --config codegen.ts",
+    "prebuild": "npm run codegen",
     "postbuild": "node copy-schema.js",
     "build": "tsc",
-    "dev": "concurrently \"npm run codegen\" \"nodemon --watch src --exec node --loader ts-node/esm ./src/index.ts\"",
+    "dev": "concurrently \"npm run codegen:watch\" \"nodemon --watch src --exec node --loader ts-node/esm ./src/index.ts\"",
     "start": "npm run build && node ./dist/index.js"
   },
   "author": "",
